@@ -1,36 +1,0 @@
-{
-  'Adult::Child1' => {
-    'Adult' => [
-      {
-        'attributes' => {},
-        'from_port' => '',
-        'to_port' => ''
-      }
-    ]
-  },
-  'Adult::Child2' => {
-    'Adult' => [
-      {
-        'attributes' => {},
-        'from_port' => '',
-        'to_port' => ''
-      }
-    ]
-  },
-  'Adult::Child::Grandchild' => {
-    'Adult::Child1' => [
-      {
-        'attributes' => {},
-        'from_port' => '',
-        'to_port' => ''
-      }
-    ],
-    'Adult::Child2' => [
-      {
-        'attributes' => {},
-        'from_port' => '',
-        'to_port' => ''
-      }
-    ]
-  }
-}
