@@ -1,14 +1,0 @@
-{
-  'Adult' => {
-    'attributes' => {}
-  },
-  'Adult::Child1' => {
-    'attributes' => {}
-  },
-  'Adult::Child2' => {
-    'attributes' => {}
-  },
-  'Adult::Child::Grandchild' => {
-    'attributes' => {}
-  }
-}
